# weather-microfw

./: README.md  docker-compose.yml  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
microfw/: __init__.py  asgi.py  celery.py  settings.py  test_settings.py  urls.py  wsgi.py
weather/: admin.py  apps.py  models.py  services.py  tasks.py  tests.py  urls.py  views.py
weather/migrations/: 0001_initial.py
