[project]
name = "weather-microfw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.0",
    "django>=5.2.9",
    "django-stubs>=5.2.8",
    "httpx>=0.28.1",
    "mypy>=1.19.0",
    "psycopg2-binary>=2.9.11",
    "redis>=7.1.0",
]
